--- a/avdual-anmeldung.html
+++ b/avdual-anmeldung.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AVdual-Anmeldung | Meldestelle BBS Stuttgart</title>
+    <title>AVdual-Vermittlungsanfrage | Meldestelle BBS Stuttgart</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
     <header class="site-header">
@@ -16,15 +17,14 @@
                 </div>
                 <nav class="main-nav">
                     <a href="index.html">Startseite</a>
-                    <a href="lehrkraefte.html">Für Schulen</a>
                 </nav>
             </div>
         </div>
     </header>
     <main class="container">
         <section class="intro-section">
-            <h1>AVdual-Anmeldung</h1>
-            <p class="intro-text">Ausbildungsvorbereitung dual – Für Jugendliche ohne Hauptschulabschluss</p>
+            <h1>AVdual-Vermittlungsanfrage</h1>
+            <p class="intro-text">Ausbildungsvorbereitung dual – Für Jugendliche mit und ohne Hauptschulabschluss</p>
         </section>
         <div class="alert alert-warning">
             <p><strong>⚠️ Wichtig:</strong> Der Anmeldeschluss ist der <strong>30. April 2026</strong>!</p>
@@ -99,33 +99,24 @@
                 </div>
             </section>
             <section class="form-section">
-                <h2>Dokumente hochladen</h2>
-                <div class="form-group">
-                    <label>Letztes Zeugnis <span class="required">*</span></label>
-                    <div class="file-upload">
-                        <input type="file" id="certificateFile" name="Zeugnis" accept=".pdf,.jpg,.jpeg,.png" required data-display="certificateFileName">
-                        <label for="certificateFile">Datei auswählen</label>
-                        <div class="file-name" id="certificateFileName">Keine Datei ausgewählt</div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label>Lebenslauf <span class="required">*</span></label>
-                    <div class="file-upload">
-                        <input type="file" id="cvFile" name="Lebenslauf" accept=".pdf,.doc,.docx" required data-display="cvFileName">
-                        <label for="cvFile">Datei auswählen</label>
-                        <div class="file-name" id="cvFileName">Keine Datei ausgewählt</div>
-                    </div>
+                <h2>Benötigte Dokumente</h2>
+                <div class="alert alert-warning">
+                    <p><strong>Hinweis:</strong> Bitte senden Sie folgende Dokumente als <strong>E-Mail-Anhänge</strong> mit:</p>
+                    <ul style="margin-top:0.5rem">
+                        <li>Letztes Zeugnis (PDF, JPG oder PNG)</li>
+                        <li>Lebenslauf (PDF oder Word)</li>
+                    </ul>
                 </div>
             </section>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary">Anmeldung absenden</button>
+                <button type="submit" class="btn btn-primary">Vermittlungsanfrage absenden</button>
             </div>
         </form>
     </main>
     <div id="successModal" class="modal">
         <div class="modal-content">
-            <h2>✅ Anmeldung erstellt!</h2>
-            <p>Ihre Anmeldung wurde als Datei heruntergeladen.<br><br><strong>Nächster Schritt:</strong><br>Bitte senden Sie diese Datei zusammen mit Ihren Dokumenten per E-Mail an:</p>
+            <h2>✅ Vermittlungsanfrage erstellt!</h2>
+            <p>Ihre Vermittlungsanfrage wurde als PDF heruntergeladen.<br><br><strong>Nächster Schritt:</strong><br>Bitte senden Sie diese PDF-Datei zusammen mit den erforderlichen Dokumenten (Zeugnis, Lebenslauf) per E-Mail an:</p>
             <!-- HIER E-MAIL ÄNDERN -->
             <p style="font-size:1.25rem;font-weight:bold"><a href="mailto:meldestelle-bs@stuttgart.de">meldestelle-bs@stuttgart.de</a></p>
             <button onclick="closeModal()" class="btn btn-primary">Verstanden</button>
