Update text and comments in index.html

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         <!-- AUSWAHL-BOXEN (Startansicht) -->
         <div id="orientation-selection" class="grid-cols-2 animate-in">
 
-            <!-- Box 1: Das "Plakat" (VABO/AVdual Wizard) -->
+            <!-- Box 1: Das "Plakat" (VABO/AVdual Wizard + Full DB) -->
             <div class="selection-card" onclick="startTool('wizard')">
                 <div class="card-icon icon-purple"><i class="fas fa-map-marked-alt"></i></div>
                 <div class="card-content">
                     <h3>Bildungs- und Qualifizierungswege</h3>
-                    <p>Finde heraus, ob VABO oder AVdual für dich in Frage kommen. Schritt für Schritt.</p>
+                    <p>Finde heraus, welcher Bildungsweg für dich passt. Mit allen Schularten und Möglichkeiten.</p>
                     <button class="btn btn-sm btn-primary mt-2">Starten <i class="fas fa-arrow-right"></i></button>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                 <div class="card-icon icon-blue"><i class="fas fa-network-wired"></i></div>
                 <div class="card-content">
                     <h3>Bildungswegetool</h3>
-                    <p>Entdecke die Vielfalt der Bildungswege in Baden-Württemberg. Von A wie Abschluss bis Z wie Zukunft.</p>
+                    <p>Visuelle Übersicht der Bildungswege. Wie komme ich von der Hauptschule zum Abitur?</p>
                     <button class="btn btn-sm btn-glass mt-2">Erkunden <i class="fas fa-arrow-right"></i></button>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                 <button onclick="backToSelection()" class="btn-text"><i class="fas fa-arrow-left"></i> Zurück zur Übersicht</button>
             </div>
 
-            <!-- TOOL 1: WIZARD (VABO/AVdual Logic) -->
+            <!-- TOOL 1: WIZARD (Full Database) -->
             <div id="wizard-content" class="hidden">
                 <h3 class="text-center mb-4">Bildungs- und Qualifizierungswege in Stuttgart</h3>
 
