--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -110,36 +109,42 @@
             </div>
         </div>
 
-        <!-- TOOL 2: BW-Option-7 (Dropdowns) -->
+        <!-- TOOL 2: BW-Option-7 (Dropdowns - Exakt nach Original-Repo) -->
         <div id="tool-bw7" class="tool-section hidden">
             <div class="glass-card wizard-container">
                 <div class="section-header text-center">
                     <span class="section-tag">Pfadfinder</span>
                     <h2>Bildungswegetool</h2>
-                    <p>Plane deinen Weg von A nach B.</p>
+                    <p>Plane deinen individuellen Bildungsweg in Baden-Württemberg.</p>
                 </div>
 
                 <div class="bw7-container">
                     <!-- Controls -->
                     <div class="bw7-controls">
+                        <!-- START Dropdown -->
                         <div class="control-group">
-                            <label><i class="fas fa-map-marker-alt"></i> Aktueller Stand:</label>
+                            <label><i class="fas fa-map-marker-alt"></i> Von welcher Schulform bzw. Abschluss aus startest Du?</label>
                             <select id="bw7-start" onchange="bw7UpdateTargets()">
-                                <option value="" disabled selected>Bitte wählen...</option>
-                                <option value="kein">Kein Schulabschluss</option>
-                                <option value="hsa">Hauptschulabschluss</option>
-                                <option value="mr">Mittlere Reife</option>
-                                <option value="fhr">Fachhochschulreife</option>
-                                <option value="abi">Abitur</option>
+                                <option value="" disabled selected>-- Bitte wählen --</option>
+                                <option value="ohneAbschluss">Ohne Abschluss (allgemeinbildende Schule)</option>
+                                <option value="sbbz">Sonderpädagogische Bildungs- und Beratungszentren (SBBZ)</option>
+                                <option value="vabo">VABO Vorqualifizierungsjahr</option>
+                                <option value="avdual">AVdual</option>
+                                <option value="hauptschulabschluss">Hauptschulabschluss</option>
+                                <option value="mittlereReife">Mittlere Reife/Mittlerer Bildungsabschluss</option>
+                                <option value="fachhochschulreife">Fachhochschulreife</option>
+                                <option value="abitur">Abitur/Allgemeine Hochschulreife</option>
+                                <option value="meister">Meister/Techniker/Fachwirt</option>
                             </select>
                         </div>
 
                         <div class="arrow-separator"><i class="fas fa-arrow-right"></i></div>
 
+                        <!-- ZIEL Dropdown -->
                         <div class="control-group">
-                            <label><i class="fas fa-flag-checkered"></i> Dein Ziel:</label>
+                            <label><i class="fas fa-flag-checkered"></i> Zu welchem schulischen oder beruflichen Abschluss möchtest Du kommen?</label>
                             <select id="bw7-ziel" onchange="bw7ShowPath()" disabled>
-                                <option value="" disabled selected>Ziel wählen...</option>
+                                <option value="" disabled selected>-- Bitte wählen --</option>
                             </select>
                         </div>
                     </div>
@@ -171,7 +176,6 @@
                         <h3>VABO</h3>
                         <p>Für Jugendliche ohne Deutschkenntnisse.</p>
                         <div class="btn-group">
-                            <!-- KORREKTER LINK MIT LEERZEICHEN (Encoded) -->
                             <a href="Anfrage%20VABO%20SJ%2026-27%20Version%2003-02-2026.pdf" target="_blank" class="btn btn-sm btn-primary">
                                 <i class="fas fa-download"></i> Vermittlungsanfrage VABO
                             </a>
